<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:id="@+id/name"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="25sp"
        />
    <Button
        android:id="@+id/schedule"
        android:clickable="true"
        android:textSize="30sp"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        android:text="@string/schedule"
        android:layout_width="match_parent"
        android:layout_height="60dp" />
    <Button
        android:id="@+id/achievement"
        android:clickable="true"
        android:textSize="30sp"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:layout_marginTop="150dp"
        android:text="@string/score"
        android:layout_width="match_parent"
        android:layout_height="60dp" />
    <Button
        android:id="@+id/loginOut"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:text="@string/loginOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>