<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="100dp"
            android:text="@string/username"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/user"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/password"
            android:layout_width="100dp"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
        android:layout_marginTop="280dp"
        android:id="@+id/loginBt"
        android:text="@string/loginBt"
        android:layout_width="match_parent"
        android:layout_height="50dp" />




</RelativeLayout>
